# exist-os

./: .gitmodules  README.md  README_en.md
.github/workflows/: build.yml
OSLoader/: CMakeLists.txt
OSLoader/Component3rd/: CMakeLists.txt
